# lockstep

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PITCH-hackathon.md  PITCH-substrate.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
config/: galileo.yaml  local.yaml
docs/: architecture.md  trust_model.md
examples/: demo_flow.py
examples/strategies/directional/: ma_crossover.py  mean_reversion.py  momentum.py
examples/strategies/market_neutral/: basis_divergence.py  naive_funding.py
lockstep/: __init__.py  cli.py  errors.py
lockstep/domains/: __init__.py
lockstep/domains/coin_flip/: __init__.py  dataset.py  evaluation.py  grader.py  solution.py
lockstep/evaluation/: __init__.py  canonical.py  evaluation.py  evaluator.py  receipt.py  solution.py
lockstep/substrate/: __init__.py  _merkle.py  _storage_http.py  attestation.py  chain.py  encryption.py  factory.py  payment.py  storage.py  storage_real.py  transport.py
reports/day-03/: STATUS.md  dataset-directional.md
reports/day-04/: dataset-market-neutral.md  strategy-retune.md
scripts/datasets/: README.md  build_directional.py  build_market_neutral.py
services/storage-ts/: Dockerfile  README.md  package-lock.json  package.json  server.ts  tsconfig.json
tests/: _synthetic.py  conftest.py  test_e2e.py
tests/datasets/: test_build_market_neutral.py
tests/examples/: conftest.py  test_reference_strategies.py
tests/integration/: test_demo_flow.py
tests/substrate/: test_attestation_mock.py  test_chain_mock.py  test_encryption_mock.py  test_factory.py  test_payment_mock.py  test_storage_conformance.py  test_storage_mock.py  test_storage_real_helpers.py  test_storage_real_unit.py  test_transport_mock.py
(+22 files in other folders)
