[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lockstep"
version = "0.1.0"
description = "A protocol for verifiable evaluation of private computation."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Steven Ciraolo", email = "steven.ciraolo@gmail.com"},
]
dependencies = [
    "pydantic>=2.0",
    "click>=8.1",
    "cryptography>=42.0",
    "requests>=2.31",
    "web3>=6.15",
    "eth-account>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]
# Used only by `scripts/datasets/build_*.py`. Heavy (~150 MB once
# numpy + pandas + pyarrow land); not needed by the lockstep package
# itself. Run `uv sync --extra datasets` before executing the builders.
datasets = [
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
]

[project.scripts]
lockstep = "lockstep.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lockstep*"]
exclude = ["tests*", "examples*", "docs*", "contracts*", "spec*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["web3.*", "eth_account.*"]
ignore_missing_imports = true
